--- a/三方工具/网址.md
+++ b/三方工具/网址.md
@@ -1,5 +1,5 @@
 1. 地图上传网址:  
-	- [PostImage](http://https://postimages.org/)  
+	- [PostImage](https://postimages.org/)  
 	- [地址](http://www.bbvdd.com/)  
 	- [牛图网](https://www.niupic.com/)  
 	- [地址](https://imgbb.com/)  
