--- a/优秀三方库/地址及简介.md
+++ b/优秀三方库/地址及简介.md
@@ -1,3 +1,4 @@
 1. [知乎开源Matisse图片选择器使用](https://github.com/zhihu/Matisse)  
 	- 支持自带多语言  
 	- 项目最好是Androidx版本,该库目前低于0.5.3-beta3集成使用是会有BUG的(imageEngine方法需要重写,不能使用GlideEngine,maxSelectable方法设置多选数量,点击超过支持数目会崩溃)  
+2. [网易云各端插件(听下架的歌曲,变灰色无法播放的歌曲)](https://github.com/meng-chuan/Unlock-netease-cloud-music)
