--- a/三方工具/网址.md
+++ b/三方工具/网址.md
@@ -11,4 +11,7 @@
 6. 抓包工具使用  
 	- [Fiddler](https://www.cnblogs.com/yyhh/p/5140852.html)  
 	- [Charles](https://www.cnblogs.com/peng-lan/p/11242954.html)  
+		1.[Charles下载地址](https://www.charlesproxy.com/latest-release/download.do)  
+		2.[Charles Https显示unknown乱码解决办法](https://www.deepsc.net/index.php/archives/210/)<!--Google搜索找打的解决办法,部分能够解决Https乱码问题,抓包的APP是开吧-->  
+		3.[Charles抓包App网络异常解决办法(采用的方法四解决的)](https://www.jianshu.com/p/b3acf7ca4ddb)
 7. [Api公共访问接口](https://www.jianshu.com/p/727c87f14ca8)
