--- a/CodeLibrary/TabHost/BottomNavigationView/AndroidXkotlinSystemCreateBottomNavigationView/app/src/main/res/values/strings.xml
+++ b/CodeLibrary/TabHost/BottomNavigationView/AndroidXkotlinSystemCreateBottomNavigationView/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Androidx_kotlin</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_find">Find</string>
+    <string name="title_message">message</string>
+    <string name="title_member">member</string>
+    <string name="title_me">me</string>
 </resources>
